# VideoPluginExample

./: .gitignore  README.md  VideoPluginExample.cryproject  system.cfg  user.cfg
Assets/Levels/: example.cry.cryasset
Assets/Levels/example/: example.bak  example.bak2  example.cry  filelist.xml  level.pak  spawnpoint.xml
Assets/Levels/example/Layers/: Main.bak  Main.bak2  main.lyr
Assets/Levels/example/leveldata/: Environment.xml  Heightmap.bak  Heightmap.bak2  TimeOfDay.xml
Assets/Libs/environmentpresets/: example.xml.cryasset
Assets/Libs/ui/: VideoPlayerTest.fla  VideoPlayerTest.gfx
Assets/Libs/ui/uiactions/: sys_statecontrol.xml  sys_statecontrol.xml.cryasset
Assets/Libs/ui/uielements/: VideoPlayerElement.xml
Assets/Materials/: terrain.mtl  videotest.mtl  videotest.mtl.cryasset
Assets/Objects/Characters/SampleCharacter/: mcg_ddna.dds.cryasset  mcg_diff.dds.cryasset  mcg_spec.dds.cryasset  thirdperson.cdf  vr_firstperson.cdf
Assets/Objects/TV/: tv.cgf  tv_0.mtl  tv_1.mtl  tv_1.mtl.cryasset  tv_2.mtl  tv_2.mtl.cryasset  tv_3.mtl  tv_3.mtl.cryasset  tv_4.mtl  tv_4.mtl.cryasset  tv_5.mtl  tv_5.mtl.cryasset  tv_6.mtl  tv_6.mtl.cryasset  tv_7.mtl  tv_7.mtl.cryasset
Assets/Textures/cubemaps/example/: environmentprobe1_cm.dds  environmentprobe1_cm_diff.dds
Assets/Videos/: crylogo.webm  texture_0.webm  texture_1.webm
Assets/config/: videoplugin.thread_config
Code/: CMakeLists.txt  GamePlugin.cpp
